[gd_scene load_steps=47 format=2]

[ext_resource path="res://menus/main_menu.gd" type="Script" id=1]
[ext_resource path="res://menus/resources/bg.png" type="Texture" id=2]
[ext_resource path="res://menus/resources/title.png" type="Texture" id=3]
[ext_resource path="res://menus/resources/play.png" type="Texture" id=4]
[ext_resource path="res://menus/resources/play_glow.png" type="Texture" id=5]
[ext_resource path="res://menus/resources/settings.png" type="Texture" id=6]
[ext_resource path="res://menus/resources/settings_glow.png" type="Texture" id=7]
[ext_resource path="res://menus/resources/credits.png" type="Texture" id=8]
[ext_resource path="res://menus/resources/credits_glow.png" type="Texture" id=9]
[ext_resource path="res://menus/resources/quit.png" type="Texture" id=10]
[ext_resource path="res://menus/resources/quit_glow.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]

resource_name = "fade_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_scene"
} ]
}

[sub_resource type="Animation" id=3]

length = 12.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "credits_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 346 ), Vector2( 120, 346 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "credits_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 346 ), Vector2( 72, 346 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 228 ), Vector2( 120, 228 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 228 ), Vector2( 72, 228 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "quit_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Quit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 405 ), Vector2( 120, 405 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "quit_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Quit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 405 ), Vector2( 72, 405 ) ]
}

[sub_resource type="Animation" id=10]

resource_name = "settings_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 286 ), Vector2( 120, 286 ) ]
}

[sub_resource type="Animation" id=11]

resource_name = "settings_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 286 ), Vector2( 72, 286 ) ]
}

[sub_resource type="Animation" id=12]

resource_name = "credits_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 346 ), Vector2( 120, 346 ) ]
}

[sub_resource type="Animation" id=13]

resource_name = "credits_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 346 ), Vector2( 72, 346 ) ]
}

[sub_resource type="Animation" id=14]

resource_name = "play_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 228 ), Vector2( 120, 228 ) ]
}

[sub_resource type="Animation" id=15]

resource_name = "play_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 228 ), Vector2( 72, 228 ) ]
}

[sub_resource type="Animation" id=16]

resource_name = "quit_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Quit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 405 ), Vector2( 120, 405 ) ]
}

[sub_resource type="Animation" id=17]

resource_name = "quit_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Quit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 405 ), Vector2( 72, 405 ) ]
}

[sub_resource type="Animation" id=18]

resource_name = "settings_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 286 ), Vector2( 120, 286 ) ]
}

[sub_resource type="Animation" id=19]

resource_name = "settings_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 286 ), Vector2( 72, 286 ) ]
}

[sub_resource type="Animation" id=20]

resource_name = "credits_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 346 ), Vector2( 120, 346 ) ]
}

[sub_resource type="Animation" id=21]

resource_name = "credits_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 346 ), Vector2( 72, 346 ) ]
}

[sub_resource type="Animation" id=22]

resource_name = "play_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 228 ), Vector2( 120, 228 ) ]
}

[sub_resource type="Animation" id=23]

resource_name = "play_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 228 ), Vector2( 72, 228 ) ]
}

[sub_resource type="Animation" id=24]

resource_name = "quit_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Quit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 405 ), Vector2( 120, 405 ) ]
}

[sub_resource type="Animation" id=25]

resource_name = "quit_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Quit:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 405 ), Vector2( 72, 405 ) ]
}

[sub_resource type="Animation" id=26]

resource_name = "settings_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 286 ), Vector2( 120, 286 ) ]
}

[sub_resource type="Animation" id=27]

resource_name = "settings_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 286 ), Vector2( 72, 286 ) ]
}

[sub_resource type="Animation" id=28]

resource_name = "credits_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 346 ), Vector2( 120, 346 ) ]
}

[sub_resource type="Animation" id=29]

resource_name = "credits_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 346 ), Vector2( 72, 346 ) ]
}

[sub_resource type="Animation" id=30]

resource_name = "play_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 228 ), Vector2( 120, 228 ) ]
}

[sub_resource type="Animation" id=31]

resource_name = "play_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 228 ), Vector2( 72, 228 ) ]
}

[sub_resource type="Animation" id=32]

resource_name = "quit_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 405 ), Vector2( 120, 405 ) ]
}

[sub_resource type="Animation" id=33]

resource_name = "quit_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 405 ), Vector2( 72, 405 ) ]
}

[sub_resource type="Animation" id=34]

resource_name = "settings_hover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 286 ), Vector2( 120, 286 ) ]
}

[sub_resource type="Animation" id=35]

resource_name = "settings_unhover"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 286 ), Vector2( 72, 286 ) ]
}

[node name="Main Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1081.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="fade" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = "fade_in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
blend_times = [  ]

[node name="TextureRect" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 1920.0
margin_bottom = 1079.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Title" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 577.0
margin_top = 118.0
margin_right = 1313.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 368, 116 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title" index="0"]

root_node = NodePath("..")
autoplay = "pulse"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/pulse = SubResource( 3 )
blend_times = [  ]

[node name="Buttons" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 70.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Play" type="TextureButton" parent="Buttons" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 228.0
margin_right = 327.0
margin_bottom = 283.0
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Settings")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Focus", "Rect", "Textures" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Play" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/credits_hover = SubResource( 4 )
anims/credits_unhover = SubResource( 5 )
anims/play_hover = SubResource( 6 )
anims/play_unhover = SubResource( 7 )
anims/quit_hover = SubResource( 8 )
anims/quit_unhover = SubResource( 9 )
anims/settings_hover = SubResource( 10 )
anims/settings_unhover = SubResource( 11 )
blend_times = [  ]

[node name="Settings" type="TextureButton" parent="Buttons" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 286.0
margin_right = 327.0
margin_bottom = 341.0
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Credits")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Rect", "Textures" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Settings" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/credits_hover = SubResource( 12 )
anims/credits_unhover = SubResource( 13 )
anims/play_hover = SubResource( 14 )
anims/play_unhover = SubResource( 15 )
anims/quit_hover = SubResource( 16 )
anims/quit_unhover = SubResource( 17 )
anims/settings_hover = SubResource( 18 )
anims/settings_unhover = SubResource( 19 )
blend_times = [  ]

[node name="Credits" type="TextureButton" parent="Buttons" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 346.0
margin_right = 327.0
margin_bottom = 401.0
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Quit")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Credits" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/credits_hover = SubResource( 20 )
anims/credits_unhover = SubResource( 21 )
anims/play_hover = SubResource( 22 )
anims/play_unhover = SubResource( 23 )
anims/quit_hover = SubResource( 24 )
anims/quit_unhover = SubResource( 25 )
anims/settings_hover = SubResource( 26 )
anims/settings_unhover = SubResource( 27 )
blend_times = [  ]

[node name="Quit" type="TextureButton" parent="Buttons" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 405.0
margin_right = 327.0
margin_bottom = 466.0
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Play")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
_sections_unfolded = [ "Focus", "Rect", "Textures" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/Quit" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/credits_hover = SubResource( 28 )
anims/credits_unhover = SubResource( 29 )
anims/play_hover = SubResource( 30 )
anims/play_unhover = SubResource( 31 )
anims/quit_hover = SubResource( 32 )
anims/quit_unhover = SubResource( 33 )
anims/settings_hover = SubResource( 34 )
anims/settings_unhover = SubResource( 35 )
blend_times = [  ]

[connection signal="mouse_entered" from="Buttons/Play" to="." method="_on_play_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/Play" to="." method="_on_play_mouse_exited"]

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]

[connection signal="mouse_entered" from="Buttons/Settings" to="." method="_on_settings_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/Settings" to="." method="_on_settings_mouse_exited"]

[connection signal="mouse_entered" from="Buttons/Credits" to="." method="_on_credits_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/Credits" to="." method="_on_credits_mouse_exited"]

[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_quit_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/Quit" to="." method="_on_quit_mouse_exited"]

[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]


